# Practicas_Rasberry

1.Blink/: Blink.c  CMakeLists.txt
2.Blink_Bank/: Blink_Bank.c  CMakeLists.txt
4.Display_74HC595/Display_Shift/: CMakeLists.txt
5.ADC_1/: ADC_1.c  CMakeLists.txt
6.LCD_1/: 6.LCD_1.c  CMakeLists.txt
9.LCD_I2C_Carlassara/: 9.LCD_I2C_Carlassara.c  CMakeLists.txt
EGA_TD3/Firmware/: CMakeLists.txt  firmware.c
EGA_TD3/HC_SR04/: README.md
EGA_TD3/HC_SR04/src/: HC_SR04.c
GPIO/CONSOLA/: CONSOLA.c
GPIO/DS18B20/: DS18B20.c
GPIO/FLAGS_LEDS/: FLAGS_LEDS.c
GPIO/HC_SR04/: CMakeLists.txt
GPIO/Pulsador/: Pulsador.c
GPIO/Rele/: CMakeLists.txt  Rele.c
GPIO/TEST_BOTON/: CMakeLists.txt  TEST_BOTON.c
GPIO/Ultrasonico_HCSR04/: CMakeLists.txt  Ultrasonico_HCSR04.c
I2C/BMP280/Firmware/: Firmware.c
I2C/LCD_I2C_LIB/: CMakeLists.txt  LCD_I2C_LIB.c
I2C/OLED_I2C/: CMakeLists.txt  README.md
I2C/oled/src/: oled.c
Interrupciones Externas/1.Interrucion_Externas/: 1.Interrucion_Externas.c
LCD/LCD_4BITS/: CMakeLists.txt  LCD_4BITS.c
LCD/LCD_4bits_LIB/: CMakeLists.txt
LCD/lcd/: CMakeLists.txt
Librerias/HC_SR04/: Uso de libreria HC_SR04.odt
Librerias/HC_SR04/include/: HC_SR04.h
Librerias/ds3231/: CMakeLists.txt
Librerias/ds3231/include/: ds3231.h
Librerias/ds3231/src/: ds3231.c
Librerias/one_wire/: CMakeLists.txt  README.md
Librerias/one_wire/include/: one_wire.h
Librerias/pid_controller/: CMakeLists.txt  README.md
Librerias/pid_controller/include/: pid_controller.h
Librerias/pid_controller/src/: pid_controller.c
Librerias/pwm_lib/: CMakeLists.txt  Uso de la Libreria.odt
Librerias/pwm_lib/include/: pwm_lib.h
Librerias/pwm_lib/src/: pwm_lib.c
Nueva carpeta/PWM_LED/: .gitignore  PWM_LED.c
Nueva carpeta/led_control/: CMakeLists.txt
Nueva carpeta/led_control/include/: led_control.h
Nueva carpeta/led_control/src/: led_control.c
Nueva carpeta/main/: CMakeLists.txt  main.c
Nueva carpeta/tp3/Firmware/: Firmware.c
Nueva carpeta/tp3/led_control/: CMakeLists.txt
PWM/Buzzer_Pasivo/: Buzzer_Pasivo.c  CMakeLists.txt
PWM/LED/: CMakeLists.txt  LED.c
PWM/pwm_lib/: CMakeLists.txt
PWM/pwm_lib/include/: pwm_lib.h
Practicas_BareMetal/3.Display/Display/: CMakeLists.txt  Display.c
Practicas_BareMetal/4.Display_74HC595/Display_Shift/: Display_Shift.c
Practicas_BareMetal/GPIO/CONSOLA/: CMakeLists.txt
Practicas_BareMetal/GPIO/DS18B20/: CMakeLists.txt
Practicas_BareMetal/GPIO/Deteccion_de_pulso/: CMakeLists.txt  Deteccion_de_pulso.c
Practicas_BareMetal/GPIO/FLAGS_LEDS/: CMakeLists.txt
Practicas_BareMetal/GPIO/Rele/: Rele.c
Teclado Matricial/Teclado_4x4/: CMakeLists.txt  Teclado_4x4.c
main/: CMakeLists.txt  main.c
tp4/Firmware/: Firmware.c
tp4_2/Firmware/: Firmware.c
tp4_3/Firmware/: Firmware.c
(+76 files in other folders)
